feat: implement production-ready Auth0 integration and database separation architecture
AUTH0 IMPROVEMENTS:
- Add proper audience configuration (theanswer.ai) and RS256 token signing algorithm
- Implement controlled debug logging with AUTH0_DEBUG/DEBUG environment flags
- Add comprehensive error handling and debug logging in Auth0 routes
- Update Auth0 configuration with proper authorization parameters and scope

DATABASE ARCHITECTURE:
- Implement clean database separation using WEB_DATABASE_NAME environment override
- Add entrypoint.sh script for Dockerized deployments with database secret parsing
- Update Next.js config to support database name override from shared Aurora secret
- Enable Prisma auto-database creation for isolated service databases

DOCKER & DEPLOYMENT:
- Update Dockerfile with Auth0 environment variables (AUTH0_TOKEN_SIGN_ALG)
- Switch from entrypoint.js to entrypoint.sh for better shell script capabilities
- Add proper file permissions and executable flags for entrypoint script
- Maintain backward compatibility for Vercel/Render native builds

AWS COPILOT CONFIGURATION:
- Update web service manifest with database separation variables
- Add service discovery URLs for internal communication
- Configure production-ready Auth0 debug settings
- Add comprehensive environment variable management

S3 & STORAGE:
- Improve conditional credential handling for DALL-E image services
- Add detailed S3 configuration logging and error handling

SECURITY & COMPATIBILITY:
- Ensure all changes maintain backward compatibility
- Implement proper secret management patterns
- Add comprehensive error handling throughout authentication flow

Deployed and tested successfully on AWS staging environment.
Database separation allows multiple services to use shared Aurora cluster with isolated schemas.
Prisma automatically creates databases if they don't exist during migration deployment.

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -38,6 +38,7 @@ ARG AUTH0_ORGANIZATION_ID
 ARG AUTH0_DOMAIN
 ARG FLAGSMITH_ENVIRONMENT_ID
 ARG WEB_AUTH0_SECRET
+ARG AUTH0_TOKEN_SIGN_ALG
 
 # Set environment variables for the build from ARGs
 # ENV BWS_ACCESS_TOKEN=$BWS_ACCESS_TOKEN
@@ -51,6 +52,7 @@ ENV AUTH0_ORGANIZATION_ID=$AUTH0_ORGANIZATION_ID
 ENV AUTH0_DOMAIN=$AUTH0_DOMAIN
 ENV FLAGSMITH_ENVIRONMENT_ID=$FLAGSMITH_ENVIRONMENT_ID
 ENV WEB_AUTH0_SECRET=$WEB_AUTH0_SECRET
+ENV AUTH0_TOKEN_SIGN_ALG=$AUTH0_TOKEN_SIGN_ALG
 
 # Use dummy DATABASE_URL for Prisma client generation during build
 # This is only needed for prisma generate, the real DATABASE_URL comes from runtime secrets
@@ -106,8 +108,11 @@ COPY --from=installer --chown=nextjs:nodejs /app/packages-answers/db/generated .
 COPY --from=installer --chown=nextjs:nodejs /app/package.json ./package.json
 COPY --from=installer --chown=nextjs:nodejs /app/pnpm-lock.yaml ./pnpm-lock.yaml
 
-# Copy entrypoint script
-COPY --from=installer --chown=nextjs:nodejs /app/apps/web/entrypoint.js ./entrypoint.js
+# Copy entrypoint.sh script
+COPY --from=installer --chown=nextjs:nodejs /app/apps/web/entrypoint.sh ./entrypoint.sh
+
+# Update permissions for entrypoint.sh
+RUN chmod +x entrypoint.sh
 
 USER nextjs
 
@@ -117,4 +122,4 @@ ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
 
 # Use Node.js entrypoint to parse DATABASE_SECRET, run migration, and start server
-CMD ["node", "entrypoint.js"]
+CMD ["sh", "entrypoint.sh"]
