--- a/copilot/web/manifest.yml
+++ b/copilot/web/manifest.yml
@@ -66,13 +66,15 @@ variables: # Pass environment variables as key value pairs.
     PORT: '3000'
     HOSTNAME: '0.0.0.0'
     NEXT_TELEMETRY_DISABLED: '1'
-    AUTH0_DEBUG: 'false'  # Disable Auth0 debugging in production
+    AUTH0_DEBUG: 'false' # Disable Auth0 debugging in production
     AUTH0_BASE_URL: ${AUTH0_BASE_URL}
-    ANSWERAI_DOMAIN: "http://web:3000"
-    FLOWISE_DOMAIN: "http://flowise:4000"
-    DOMAIN: "http://flowise:4000"
+    ANSWERAI_DOMAIN: 'http://web:3000'
+    FLOWISE_DOMAIN: 'http://flowise:4000'
+    DOMAIN: 'http://flowise:4000'
+    # External API endpoint for OAuth callbacks, MCP tools, and external integrations
+    API_HOST: 'https://api.${CLIENT_DOMAIN}'
     # Database separation: Web service uses different database than Flowise
-    WEB_DATABASE_NAME: "web"  # Override flowise database name from shared secret
+    WEB_DATABASE_NAME: 'web' # Override flowise database name from shared secret
     REDIS_URL:
         from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-RedisURL
 
@@ -97,6 +99,7 @@ environments:
                 # Service aliases for same account strategy
                 - web.prod.${CLIENT_DOMAIN}
                 - prod.${CLIENT_DOMAIN}
+                - ${CLIENT_DOMAIN}
 
     # Standalone: Separate account deployment (independent accounts)
     staging-standalone:
