feat: add Auth0 secret configuration to environment template
- Introduced AUTH0_SECRET variable in the copilot environment template to facilitate session cookie encryption.
- Added detailed comments to guide users on generating and using the Auth0 secret for consistent session management across instances.

This change enhances the security configuration for Auth0 integration, ensuring proper session handling in the application.

--- a/copilot._environment_.env.template
+++ b/copilot._environment_.env.template
@@ -15,6 +15,12 @@ AUTH0_SCOPE="openid profile email"
 AUTH0_TOKEN_SIGN_ALG=RS256
 AUTH0_ORGANIZATION_ID=org_UKvaP3vZRmC7hALa
 
+# Auth0 Secret: 32-byte hex-encoded secret for session cookie encryption
+# Used by both server-side JWT validation and client-side session management
+# Must be consistent across all instances to maintain session persistence
+# Generate with: openssl rand -hex 32
+AUTH0_SECRET=
+
 LANGFUSE_RELEASE=
 LANGFUSE_SECRET_KEY=
 LANGFUSE_PUBLIC_KEY=
