feat: refactor copilot deployment to standalone-only architecture with automated domain switching
BREAKING CHANGE: Removes dual-strategy deployment in favor of simplified standalone approach

## Major Changes

### Architecture Simplification
- Remove dual-strategy deployment (default vs standalone) in favor of single standalone approach
- Eliminate "-standalone" suffix from environment names (staging/prod only)
- Simplify domain patterns to clean {service}.{client-domain} format
- All environments now use separate Copilot applications within same AWS account

### New Automation & Scripts
- Add `copilot-switch-app.sh` for automatic domain-based application context switching
- Add `copilot-auto-deploy.sh` for interactive deployment with environment selection
- Implement `precopilot` prehook that runs automatically with pnpm copilot commands
- Add `copilot:auto` pnpm script for streamlined deployment workflow

### Enhanced Documentation
- Complete rewrite of copilot/README.md with new standalone architecture
- Add comprehensive domain switching documentation and examples
- Include troubleshooting section for context switching issues
- Update all deployment commands to use pnpm workflow
- Add version 2.0.0 changelog entry

### Configuration Updates
- Remove staging-standalone/ and prod-standalone/ environment directories
- Update flowise-cluster.yml and redis-elasticache.yml to remove standalone mappings
- Simplify service manifests (flowise/manifest.yml, web/manifest.yml)
- Comment out unused Auth0 variables in web manifest for cleaner configuration
- Add .gitignore entries for copilot/.workspace and copilot/.gitignore

### Package.json Scripts
- Add `precopilot` script that runs domain switching automatically
- Add `copilot:auto` script for interactive deployment
- Maintain existing `copilot` script with enhanced automation

## Technical Details

### Domain Switching Logic
- Automatic application name generation based on CLIENT_DOMAIN
- Handles staging prefixes (stagi

--- a/.gitignore
+++ b/.gitignore
@@ -112,13 +112,12 @@ daisy
 .sst
 
 # Explicitly ignore all manifest files in the environments directory
+copilot/.workspace
 copilot/environments/**/manifest.yml
 # Manifests to include in the repo:
 !copilot/environments/addons/flowise-cluster.yml
 !copilot/environments/staging/manifest.yml
 !copilot/environments/prod/manifest.yml
-!copilot/environments/staging-standalone/manifest.yml
-!copilot/environments/prod-standalone/manifest.yml
 
 ## AnswerAI
 
