--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
         "seed-credentials:write": "pnpm secure-run \"node ./scripts/seed-credentials/seed-credentials.js --auto-detect\"",
         "submodule:init": "git submodule update --init --recursive --force",
         "submodule:reset": "git submodule deinit -f --all && git submodule update --init --recursive",
-        "copilot": "BWS_SUPPRESS_ALL=true pnpm secure-run copilot"
+        "precopilot": "BWS_SUPPRESS_ALL=true pnpm secure-run sh copilot/copilot-switch-app.sh && sleep 1",
+        "copilot": "BWS_SUPPRESS_ALL=true pnpm secure-run copilot",
+        "copilot:auto": "./copilot/copilot-auto-deploy.sh"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": "eslint --fix"
