fix: update copilot:auto script to use bash for execution
- Changed the execution command for the `copilot:auto` script in package.json from a relative path to a bash command for improved compatibility and reliability during deployment processes.

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
         "submodule:reset": "git submodule deinit -f --all && git submodule update --init --recursive",
         "precopilot": "BWS_SUPPRESS_ALL=true pnpm secure-run sh copilot/copilot-switch-app.sh && sleep 1",
         "copilot": "BWS_SUPPRESS_ALL=true pnpm secure-run copilot",
-        "copilot:auto": "./copilot/copilot-auto-deploy.sh"
+        "copilot:auto": "bash ./copilot/copilot-auto-deploy.sh"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": "eslint --fix"
