fix: update environment configuration and deployment script for PostgreSQL integration
- Added new environment variables for PostgreSQL configuration in manifest.yml files for both flowise and web services, enhancing database connectivity.
- Updated the copilot-auto-deploy.sh script to include checks for existing Copilot applications and environments, improving deployment reliability and user experience.
- Enhanced handling of database connection details, allowing for better management of individual AAI services with their own database credentials.
- Cleaned up environment file references to ensure consistency across applications, facilitating smoother deployments.

--- a/copilot/flowise/manifest.yml
+++ b/copilot/flowise/manifest.yml
@@ -42,6 +42,8 @@ storage:
 
 # Optional fields for more advanced use-cases.
 variables: # Pass environment variables as key value pairs.
+    PORT: '4000'
+    DATABASE_TYPE: 'postgres'
     NUMBER_OF_PROXIES: '1'
     CHATFLOW_DOMAIN: 'http://flowise:4000'
     DOMAIN: 'http://flowise:4000'
@@ -54,9 +56,11 @@ variables: # Pass environment variables as key value pairs.
     REDIS_URL:
         from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-RedisURL
 
-env_file: copilot.${COPILOT_ENVIRONMENT_NAME}.env
+env_file: copilot.${COPILOT_APPLICATION_NAME}.env
 
 secrets:
+    # Main database secret - parsed by app to extract all database connection details
+    # For individual AAI service management, add: AAI_DEFAULT_POSTGRES_*_SECRET
     DATABASE_SECRET:
         from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-flowiseclusterAuroraSecret
 
