fix: update Dockerfile to streamline build arguments and environment variables
- Refactored the Dockerfile to improve clarity by commenting out unused BWS_ACCESS_TOKEN and consolidating the active build arguments and environment variables.
- This change enhances the organization of the Dockerfile, ensuring only relevant variables are set for deployment while preparing for potential future use of the BWS token.

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -26,33 +26,14 @@ RUN pnpm config set store-dir ~/.pnpm-store
 FROM base AS installer
 WORKDIR /app
 
-# Accept build argument for BWS token
+# Build arguments and environment variables
+# BWS (Bitwarden Secrets) - commented for future use
 # ARG BWS_ACCESS_TOKEN
-ARG AUTH0_BASE_URL
-ARG AUTH0_SECRET
-ARG AUTH0_ISSUER_BASE_URL
-ARG AUTH0_CLIENT_ID
-ARG AUTH0_CLIENT_SECRET
-ARG AUTH0_AUDIENCE
-ARG AUTH0_ORGANIZATION_ID
-ARG AUTH0_DOMAIN
-ARG FLAGSMITH_ENVIRONMENT_ID
-ARG WEB_AUTH0_SECRET
-ARG AUTH0_TOKEN_SIGN_ALG
-
-# Set environment variables for the build from ARGs
 # ENV BWS_ACCESS_TOKEN=$BWS_ACCESS_TOKEN
+
+# Active build arguments and environment variables  
+ARG AUTH0_BASE_URL
 ENV AUTH0_BASE_URL=$AUTH0_BASE_URL
-ENV AUTH0_SECRET=$AUTH0_SECRET
-ENV AUTH0_ISSUER_BASE_URL=$AUTH0_ISSUER_BASE_URL
-ENV AUTH0_CLIENT_ID=$AUTH0_CLIENT_ID
-ENV AUTH0_CLIENT_SECRET=$AUTH0_CLIENT_SECRET
-ENV AUTH0_AUDIENCE=$AUTH0_AUDIENCE
-ENV AUTH0_ORGANIZATION_ID=$AUTH0_ORGANIZATION_ID
-ENV AUTH0_DOMAIN=$AUTH0_DOMAIN
-ENV FLAGSMITH_ENVIRONMENT_ID=$FLAGSMITH_ENVIRONMENT_ID
-ENV WEB_AUTH0_SECRET=$WEB_AUTH0_SECRET
-ENV AUTH0_TOKEN_SIGN_ALG=$AUTH0_TOKEN_SIGN_ALG
 
 # Use dummy DATABASE_URL for Prisma client generation during build
 # This is only needed for prisma generate, the real DATABASE_URL comes from runtime secrets
