--- a/copilot/flowise/manifest.yml
+++ b/copilot/flowise/manifest.yml
@@ -42,6 +42,7 @@ storage:
 
 # Optional fields for more advanced use-cases.
 variables: # Pass environment variables as key value pairs.
+    NODE_ENV: 'production'
     PORT: '4000'
     DATABASE_TYPE: 'postgres'
     NUMBER_OF_PROXIES: '1'
@@ -60,7 +61,7 @@ env_file: copilot.${COPILOT_APPLICATION_NAME}.env
 
 secrets:
     # Main database secret - parsed by app to extract all database connection details
-    # For individual AAI service management, add: AAI_DEFAULT_POSTGRES_*_SECRET
+    # For individual AAI service management, add: AAI_DEFAULT_POSTGRES_*_SECRET or modify the .env file.
     DATABASE_SECRET:
         from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-flowiseclusterAuroraSecret
 
