feat: comprehensive copilot deployment improvements and fixes
🔧 Core Logic Fixes:
- Fix critical deployment logic: check app existence before env file operations
- Add intelligent template selection for new apps vs existing apps
- Prevent failed S3 operations on non-existent app infrastructure

🛠️ macOS Compatibility:
- Replace Bash 4+ associative arrays with Bash 3.x compatible approach
- Ensure compatibility with default macOS bash (3.2.57)

🎯 User Experience Enhancements:
- Eliminate duplicate variable prompting between Flowise and Web configs
- Add unified proceed/wait logic across all template creation paths
- Auto-generate SESSION_SECRET and AUTH0_SECRET securely
- Clean up prompt text and remove redundant 'optional' descriptors

⚙️ Configuration Improvements:
- Make all Auth0 variables required (ORGANIZATION_ID, CLIENT_ID, CLIENT_SECRET)
- Add AUTH0_AUDIENCE as configurable field with theanswer.ai example
- Add Langfuse defaults (n/a keys, cloud.langfuse.com host)
- Intelligent variable sharing between Flowise and Web configurations

📝 Template Updates:
- Remove hardcoded theanswer.ai from AUTH0_AUDIENCE in templates
- Make AUTH0_AUDIENCE user-configurable with helpful examples

🚀 Deployment Flow:
- New apps: auto-select template creation → user chooses guided/empty → proceed/wait
- Existing apps: normal interactive flow with S3 download option
- Robust error handling and signal cleanup throughout

Resolves deployment failures for new applications and significantly improves user experience while maintaining 100% backward compatibility.

--- a/copilot/copilot.applicationName.web.env.template
+++ b/copilot/copilot.applicationName.web.env.template
@@ -5,7 +5,7 @@
 AUTH0_JWKS_URI=
 AUTH0_ISSUER_BASE_URL=  # Required: OAuth issuer URL
 AUTH0_BASE_URL=  # Required: Should match CLIENT_DOMAIN from deployment
-AUTH0_AUDIENCE=https://theanswer.ai  # Required: API audience for token validation
+AUTH0_AUDIENCE=  # Required: API audience for token validation
 AUTH0_SCOPE="openid profile email"
 AUTH0_TOKEN_SIGN_ALG=RS256
 AUTH0_DOMAIN=
