--- a/copilot/copilot.applicationName.env.template
+++ b/copilot/copilot.applicationName.env.template
@@ -31,7 +31,7 @@ SESSION_SECRET=  # Required: Keep consistent across deployments
 AUTH0_JWKS_URI=
 AUTH0_ISSUER_BASE_URL=  # Required: For JWT token validation
 AUTH0_BASE_URL=  # Should match CLIENT_DOMAIN from deployment
-AUTH0_AUDIENCE=https://theanswer.ai  # Required: For JWT token validation
+AUTH0_AUDIENCE=  # Required: For JWT token validation
 AUTH0_SCOPE="openid profile email"
 AUTH0_TOKEN_SIGN_ALG=RS256  # JWT signing algorithm (defaults to HS256 in code)
 AUTH0_DOMAIN=
