feat: add S3 region infrastructure support via CloudFormation
- Add theansweraiserverstorageBucketRegion output to S3 storage addon
- Configure manifest to pull S3_STORAGE_REGION from CloudFormation
- Ensures automatic region detection from deployment context
- Eliminates manual region configuration in environment files

Resolves S3 deployment failures due to missing region configuration.

--- a/copilot/environments/addons/theanswerai-server-storage.yml
+++ b/copilot/environments/addons/theanswerai-server-storage.yml
@@ -67,3 +67,8 @@ Outputs:
         Value: !GetAtt theansweraiserverstorageBucket.Arn
         Export:
             Name: !Sub ${App}-${Env}-theansweraiserverstorageBucketARN
+    theansweraiserverstorageBucketRegion:
+        Description: 'The AWS region where the theanswerai-server-storage bucket is deployed.'
+        Value: !Ref AWS::Region
+        Export:
+            Name: !Sub ${App}-${Env}-theansweraiserverstorageBucketRegion
