--- a/copilot/flowise/manifest.yml
+++ b/copilot/flowise/manifest.yml
@@ -52,6 +52,8 @@ variables: # Pass environment variables as key value pairs.
     ANSWERAI_DOMAIN: 'http://web:3000'
     S3_STORAGE_BUCKET_NAME:
         from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-theansweraiserverstorageBucketName
+    S3_STORAGE_REGION:
+        from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-theansweraiserverstorageBucketRegion
     AAI_DEFAULT_REDIS_URL:
         from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-RedisURL
     REDIS_URL:
