feat: add comprehensive environment templates for Flowise and web applications
- Introduced new `copilot.appName.env.template` and `copilot.appName.web.env.template` files containing detailed configuration settings for Flowise and web applications, respectively.
- Enhanced user experience by providing structured templates for environment variables, including API keys, Auth0 settings, and logging configurations.
- Added documentation for environment file creation options, guiding users through manual and automated setups.
- Improved deployment readiness by ensuring all necessary configurations are clearly defined and easily accessible.

These changes streamline the setup process for developers and enhance the overall usability of the Flowise deployment setup.

--- a/copilot/copilot.appName.env.template
+++ b/copilot/copilot.appName.env.template
@@ -9,9 +9,11 @@ DISABLE_FLOWISE_TELEMETRY=true
 IFRAME_ORIGINS=*
 CORS_ORIGINS=*
 
-# API key and secret storage - S3 bucket handled by manifest
+# API key and secret storage
 APIKEY_STORAGE_TYPE=db
-STORAGE_TYPE=s3
+# Note: STORAGE_TYPE is now set in manifest.yml along with S3 bucket configuration
+# to ensure they are set together and avoid startup errors
+# STORAGE_TYPE=s3  # Moved to manifest.yml
 
 # Enable Flagsmith 
 FLAGSMITH_ENVIRONMENT_ID=
