fix: S3 storage and Auth0 RS256 configuration for Copilot deployment
Core Fixes:
- Fix S3 bucket CloudFormation reference in manifest.yml
- Fix Auth0 RS256 token validation (remove secret, use JWKS)
- Move STORAGE_TYPE to manifest to prevent startup timing issues

Enhanced Debugging:
- Add comprehensive S3 configuration debugging utility
- Always show S3 config on startup for troubleshooting
- Enhance error messages with actionable troubleshooting steps

Configuration Updates:
- Update env templates with correct Auth0 documentation
- Add production-safe debug variable defaults

Test Infrastructure:
- Add docker/test/flowise-startup-auth-s3/ for local testing
- Include comprehensive test scenarios and documentation
- Provide generic test configuration templates

All changes are backwards compatible and production-ready.

--- a/copilot/flowise/manifest.yml
+++ b/copilot/flowise/manifest.yml
@@ -44,16 +44,20 @@ storage:
 variables: # Pass environment variables as key value pairs.
     NODE_ENV: 'production'
     PORT: '4000'
+    # Database type (required for DataSource initialization)
     DATABASE_TYPE: 'postgres'
     NUMBER_OF_PROXIES: '1'
     CHATFLOW_DOMAIN: 'http://flowise:4000'
     DOMAIN: 'http://flowise:4000'
     FLOWISE_DOMAIN: 'http://flowise:4000'
     ANSWERAI_DOMAIN: 'http://web:3000'
+    # STORAGE_TYPE must be set together to avoid startup errors (db, s3, local)
+    STORAGE_TYPE: 's3'
     S3_STORAGE_BUCKET_NAME:
         from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-theansweraiserverstorageBucketName
-    S3_STORAGE_REGION:
-        from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-theansweraiserverstorageBucketRegion
+    # Optional: S3 region (defaults to us-east-1 if not provided)
+    # S3_STORAGE_REGION:
+    #     from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-theansweraiserverstorageBucketRegion
     AAI_DEFAULT_REDIS_URL:
         from_cfn: ${COPILOT_APPLICATION_NAME}-${COPILOT_ENVIRONMENT_NAME}-RedisURL
     REDIS_URL:
