--- a/copilot/copilot.appName.env.template
+++ b/copilot/copilot.appName.env.template
@@ -41,9 +41,10 @@ AUTH0_ORGANIZATION_ID=
 AUTH0_CLIENT_ID=  # Optional: Only needed if using OAuth endpoints
 AUTH0_CLIENT_SECRET=  # Optional: Only needed if using OAuth endpoints
 
-# Auth0 Secret: Required for JWT token validation
+# Auth0 Secret: Required for session management (not JWT validation)
 # Must match the web app's AUTH0_SECRET for session consistency
-AUTH0_SECRET=  # Required: Same as web app
+# Note: For RS256 JWT validation, we use JWKS instead of this secret
+AUTH0_SECRET=  # Required: Same as web app for session management
 
 # # ==================================================
 # # DEBUG & LOGGING CONFIGURATION
