fix: update environment templates and documentation for Copilot deployment
Changes:
- Removed outdated comments regarding STORAGE_TYPE from `copilot.appName.env.template` to streamline configuration.
- Enhanced `env-file-creation.md` with a new option for auto-downloading existing environment variables from AWS, improving deployment flexibility.
- Updated `route53-prerequisites.md` to clarify domain setup instructions and emphasize the need for separate hosted zones for test environments.

These updates improve clarity and usability for developers setting up Copilot deployments, ensuring a smoother configuration process.

--- a/copilot/copilot.appName.env.template
+++ b/copilot/copilot.appName.env.template
@@ -11,9 +11,6 @@ CORS_ORIGINS=*
 
 # API key and secret storage
 APIKEY_STORAGE_TYPE=db
-# Note: STORAGE_TYPE is now set in manifest.yml along with S3 bucket configuration
-# to ensure they are set together and avoid startup errors
-# STORAGE_TYPE=s3  # Moved to manifest.yml
 
 # Enable Flagsmith 
 FLAGSMITH_ENVIRONMENT_ID=
@@ -35,7 +32,7 @@ AUTH0_ISSUER_BASE_URL=  # Required: For JWT token validation
 AUTH0_BASE_URL=  # Should match CLIENT_DOMAIN from deployment
 AUTH0_AUDIENCE=  # Required: For JWT token validation
 AUTH0_SCOPE="openid profile email"
-AUTH0_TOKEN_SIGN_ALG=RS256  # JWT signing algorithm (defaults to HS256 in code)
+AUTH0_TOKEN_SIGN_ALG=RS256
 AUTH0_DOMAIN=
 AUTH0_ORGANIZATION_ID=
 AUTH0_CLIENT_ID=  # Optional: Only needed if using OAuth endpoints
@@ -65,9 +62,9 @@ AAI_DEFAULT_OPENAI_API_KEY=
 # LANGFUSE CONFIGURATION
 # ==================================================
 # Langfuse tracing and monitoring
-LANGFUSE_SECRET_KEY=
-LANGFUSE_PUBLIC_KEY=
-LANGFUSE_HOST=https://cloud.langfuse.com
+# LANGFUSE_SECRET_KEY=
+# LANGFUSE_PUBLIC_KEY=
+# LANGFUSE_HOST=https://cloud.langfuse.com
 
 
 # # ==================================================
@@ -91,7 +88,7 @@ LANGFUSE_HOST=https://cloud.langfuse.com
 # AAI_DEFAULT_POSTGRES_RECORDMANAGER_USER=
 # AAI_DEFAULT_POSTGRES_RECORDMANAGER_PASSWORD=
 # AAI_DEFAULT_POSTGRES_RECORDMANAGER_PORT=5432
-# AAI_DEFAULT_POSTGRES_RECORDMANAGER_TABLE_NAME=upsertion_records# 
+# AAI_DEFAULT_POSTGRES_RECORDMANAGER_TABLE_NAME=upsertion_records
 
 # # PostgreSQL for Agent Memory
 # AAI_DEFAULT_POSTGRES_AGENTMEMORY_DATABASE=
@@ -99,7 +96,7 @@ LANGFUSE_HOST=https://cloud.langfuse.com
 # AAI_DEFAULT_POSTGRES_AGENTMEMORY_USER=
 # AAI_DEFAULT_POSTGRES_AGENTMEMORY_PASSWORD=
 # AAI_DEFAULT_POSTGRES_AGENTMEMORY_PORT=5432
-# AAI_DEFAULT_POSTGRES_AGENTMEMORY_TABLE_NAME=aai_agent_memory# 
+# AAI_DEFAULT_POSTGRES_AGENTMEMORY_TABLE_NAME=aai_agent_memory
 
 # # PostgreSQL for Vector Store
 # AAI_DEFAULT_POSTGRES_VECTORSTORE_DATABASE=
