feat: add CORS configuration to S3 bucket for enhanced security and accessibility
Changes:
- Introduced CORS rules in `theanswerai-server-storage.yml` to allow specific HTTP methods and origins.
- Configured allowed headers and methods to facilitate cross-origin requests from designated domains, improving integration with frontend applications.

These updates enhance the security and flexibility of the S3 storage configuration, ensuring proper access control for web applications while maintaining compliance with CORS standards.

--- a/copilot/environments/addons/theanswerai-server-storage.yml
+++ b/copilot/environments/addons/theanswerai-server-storage.yml
@@ -34,6 +34,27 @@ Resources:
                       NoncurrentVersionExpirationInDays: 30
                       AbortIncompleteMultipartUpload:
                           DaysAfterInitiation: 1
+            CorsConfiguration:
+                CorsRules:
+                    - AllowedHeaders:
+                          - '*'
+                      AllowedMethods:
+                          - GET
+                          - PUT
+                          - POST
+                          - DELETE
+                      AllowedOrigins:
+                          - 'http://web:3000'
+                          - 'http://flowise:4000'
+                          - 'https://staging.*.theanswer.ai'
+                          - 'https://api.staging.*.theanswer.ai'
+                          - 'https://web.staging.*.theanswer.ai'
+                          - 'https://flowise.staging.*.theanswer.ai'
+                          - 'https://*.theanswer.ai'
+                          - 'https://api.*.theanswer.ai'
+                          - 'https://web.*.theanswer.ai'
+                          - 'https://flowise.*.theanswer.ai'
+                      ExposedHeaders: []
 
     theansweraiserverstorageBucketPolicy:
         Metadata:
