chore: update Dockerfile and manifest.yml for improved deployment configuration
Changes:
- Added metadata labels to the Dockerfile for better identification and versioning of the AnswerAI Web Application.
- Streamlined the installation process in the Dockerfile by consolidating package installations and ensuring essential tools are included.
- Updated the manifest.yml to uncomment and enable Lacework sidecar integration, providing clearer instructions for future deployments.
- Enhanced error logging in create-env-files.js to include specific error messages for AWS CLI and credential issues, improving user guidance during setup.

These updates enhance the deployment process by providing better configuration management and clearer error handling, ensuring a smoother experience for developers during application setup and deployment.

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -3,23 +3,24 @@ FROM --platform=linux/amd64 node:20-slim AS base
 # This Dockerfile is optimized for Next.js standalone mode deployment
 # Make sure you update both files if copying to documentation!
 
+# Add metadata labels
+LABEL maintainer="AnswerAI Team"
+LABEL version="1.0"
+LABEL description="AnswerAI Web Application"
+
 WORKDIR /app
 
-# Install essential tools for BWS and build process
+# Install essential tools for build process, pnpm, turbo, and configure pnpm store
 RUN apt-get update && apt-get install -y \
-    curl \
-    wget \
-    git \
-    unzip \
     ca-certificates \
+    curl \
+    git \
     openssl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install pnpm and turbo globally
-RUN npm install -g pnpm turbo@1
-
-# Configure pnpm store
-RUN pnpm config set store-dir ~/.pnpm-store
+    unzip \
+    wget \
+    && rm -rf /var/lib/apt/lists/* \
+    && npm install -g pnpm turbo@1 \
+    && pnpm config set store-dir ~/.pnpm-store
 
 ################################################################################
 
